--- a/convertor_binar.html
+++ b/convertor_binar.html
@@ -16,7 +16,7 @@
         
             <div class="off-screen-menu">
                  <ul>
-                    <li><a href="proiect.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="convertor_binar.html">Base Convertor</a></li>
                 <li><a href="convertor_lungime.html">Length Convertor</a></li>
                 <li><a href="convertor_temperatura.html">Temperature Convertor</a></li>
